# raytracer

./: .gitignore  Cargo.toml  scene.toml
src/: main.rs
