[package]
name = "raytrace"
version = "0.1.0"
authors = ["Roger Curley <rocurley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.8"
anyhow = "1.0"
ordered-float = "2.2"
rand = "0.8.3"
rand_distr = "0.4.0"
